--- a/JVM/类加载机制.md
+++ b/JVM/类加载机制.md
@@ -57,7 +57,7 @@
 
 几种类加载器的层次关系如下。且父类加载器并不是通过继承关系来实现的，而是采用组合实现的（自应阔气）
 
-![img](http://mmbiz.qpic.cn/mmbiz_png/PgqYrEEtEnokxXiapDdvntH8PGwa0zGXM7qXKib1ibsib1BuyLxjoP1sgorwib78yTD4896N5r1AibdhDXTHZ7z9VyBg/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+![img](..\image\jvm\startclassload.png)
 
 从java开发者角度来讲
 
@@ -79,17 +79,15 @@
 - 2、通过Class.forName()方法动态加载
 - 3、通过ClassLoader.loadClass()方法动态加载
 
-> > **Class.forName()和ClassLoader.loadClass()区别**
-> >
-> > - `Class.forName()`：将类的.class文件加载到jvm中之外，还会对类进行解释，执行类中的static块；
-> >
-> > - `ClassLoader.loadClass()`：只干一件事情，就是将.class文件加载到jvm中，不会执行static中的内容,只有在newInstance才会去执行static块。
-> >
-> > - > `Class.forName(name,initialize,loader)`带参函数也可控制是否加载static块。并且只有调用了newInstance()方法采用调用构造函数，创建类的对象 。
->
-> ## 双亲委派模型
->
-> ​	如果一个类加载器收到了类加载的请求，它首先不会自己去尝试加载这个类，而是把请求**委托给父加载器**去完成，依次向上，因此，所有的类加载请求最终都应该被传递到顶层的启动类加载器中，只有当**父**加载器在它的搜索范围中**没有**找到所需的类时，即无法完成该加载，**子**加载器才会**尝试**自己去加载该类	
+> **Class.forName()和ClassLoader.loadClass()区别**
+> 
+> - `Class.forName()`：将类的.class文件加载到jvm中之外，还会对类进行解释，执行类中的static块；
+> - `ClassLoader.loadClass()`：只干一件事情，就是将.class文件加载到jvm中，不会执行static中的内容,只有在newInstance才会去执行static块。
+> - Class.forName(name,initialize,loader)`带参函数也可控制是否加载static块。并且只有调用了newInstance()方法采用调用构造函数，创建类的对象 。
+
+## 双亲委派模型
+
+​	如果一个类加载器收到了类加载的请求，它首先不会自己去尝试加载这个类，而是把请求**委托给父加载器**去完成，依次向上，因此，所有的类加载请求最终都应该被传递到顶层的启动类加载器中，只有当**父**加载器在它的搜索范围中**没有**找到所需的类时，即无法完成该加载，**子**加载器才会**尝试**自己去加载该类	
 
 双亲委派模型意义：
 
