--- a/mysql/事务.md
+++ b/mysql/事务.md
@@ -1,8 +1,8 @@
-##### 事务特性
+#### 事务特性
 
 ACID
 
-##### 事务并发问题
+#### 事务并发问题
 
 - 脏读：事务A读取了事务B未提交的数据。
 
@@ -12,7 +12,7 @@ ACID
 
   **不可重复读侧重于update操作，幻读侧重于insert或delete。解决不可重复读的问题只需锁住满足条件的行，解决幻读需要锁表。**
 
-##### 事务隔离级别
+#### 事务隔离级别
 
 - `读未提交（READ UNCOMMITTED）`：一个事务还没提交时，它做的变更就能被别的事务看到。
 - `读提交（READ COMMITTED）`：一个事务提交之后，它做的变更才会被其他事务看到。
@@ -30,15 +30,31 @@ ACID
 
 RC下Read View在每次SELECT后都生成新的ReadView.即每次SELECT都能读取到已COMMIT的数据.存在不可重复读、幻读
 
-##### MVCC---Multi-Version Concurrency Control
+#### MVCC---Multi-Version Concurrency Control
 
 MVCC只在RR和RC下工作，在mysql 中的实现依赖的是 undo log 与 read view。InnoDB的MVCC是通过在每行记录后面保存两个隐藏的列来实现的。**一个保存了行的事务ID（DB_TRX_ID），一个保存了行的回滚指针（DB_ROLL_PT）**。
 
 m_ids :  **ReadView**中主要包含当前系统中还有哪些活跃的读写事务
 
-RC：**每次查询开始时都会生成一个独立的 ReadView，做到保证每次提交后的数据是处于当前的可见状态
+RC：每次查询开始时都会生成一个独立的 ReadView，做到保证每次提交后的数据是处于当前的可见状态
 
 RR：**第一次读取数据时生成一个实时的ReadView（m_ids列表）**，做到保证每次提交后的数据是处于当前的可见状态。
+
+> 查看：https://blog.51cto.com/12182612/2486731
+
+#### spring事务传播行为：PROPAGATION_XX
+
+| 事务传播行为类型 | 说明                                                         |
+| ---------------- | ------------------------------------------------------------ |
+| REQUIRED         | 如果当前没有事务，则**新建**一个事务；如果已经存在一个事务，则**加入**到这个事务中。（最常用） |
+| SUPPORTS         | 如果当前没有事务，则以**非事务方式**执行；如果已经存在一个事务，则**加入**到这个事务中。 |
+| MANDATORY        | 如果当前没有事务，则以抛出**异常**；如果已经存在一个事务，则**加入**到这个事务中。 |
+| REQUIRES_NEW     | 如果当前没有事务， **新建**事务。如果当前存在事务，则把当前事务**挂起**。 |
+| NOT_SUPPORTED    | 如果当前没有事务， 以**非事务方式**执行。如果当前存在事务，则把当前事务**挂起**。 |
+| NEVER            | 如果当前没有事务，以**非事务方式**执行。如果当前存在事务，则抛出**异常**。 |
+| NESTED           | 如果当前没有事务，则创建一个事务；如果当前存在事务，则再**嵌套**事务内执行。 |
+
+
 
 
 
