--- a/redis/升级.md
+++ b/redis/升级.md
@@ -72,7 +72,7 @@ save：阻塞其他命令，执行完成，如果存在老的rdb,用新的替换
 
 bgsave：后台异步执行快照操作，其他命令依然可以执行。一般采用该方式
 
-自动化：由配置文件触发。
+自动化：由配置文件触发,参数：。
 
 ​							a.save m n 存在m秒内触发了n次修改，自动触发bgsave
 
