--- a/java/基础.md
+++ b/java/基础.md
@@ -115,6 +115,37 @@ Volatile如何保证内存可见性:
 1.当写一个volatile变量时，JMM会把该线程对应的本地内存中的共享变量刷新到主内存。
 2.当读一个volatile变量时，JMM会把该线程对应的本地内存置为无效。线程接下来将从主内存中读取共享变量
 
+#### 16.深克隆和浅克隆
+
+克隆：快速复制一个对象的副本
+
+- 浅克隆：new 一个对象，新对象中的基本属性和原先对象完全相同，引用类型的属性仍指向原对象的内存地址。调用clone()
+- 深克隆：new一个对象，新对象中的所有属性不再指向原对象。将浅克隆用对象流写入流然后再读出是进行的深克隆
+
+#### 反射
+
+- 反射：动态获取信息以及动态调用对象的方法
+- 作用：可以实现反编译。class-java.  获取类的属性和方法
+- 优点：提高程序的灵活性和扩展性。创建对象不用通过new写死。可以通过配置读取创建
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
