--- a/项目/总结.md
+++ b/项目/总结.md
@@ -100,3 +100,52 @@ https://www.jianshu.com/p/cf78e68e3a99
 > ```
 >
 > https://zhuanlan.zhihu.com/p/107776367
+
+#### 通过nginx实现打点记录
+
+定义格式
+
+```
+log_format dot_str escape=json '$time_local - $page- $content';
+```
+
+在server中过滤数据
+
+```
+server {
+    set $version '';
+    set $content '';
+        location /dotting/pc {
+            content_by_lua '
+                function read_from_file(file_name)
+                    local f = assert(io.open(file_name, "r"))
+                    local string = f:read("*all")
+                    f:close()
+                    return string
+                end
+                local args = ngx.req.get_uri_args()
+                ngx.var.page = args["page"]
+                local request_method = ngx.var.request_method
+                if request_method == "GET" then
+                    ngx.var.content = args["content"]
+                elseif request_method == "POST" then
+                    ngx.req.read_body()
+                    local body_str = ngx.req.get_body_data()
+                    if nil == body_str then
+                        local body_file = ngx.req.get_body_file()
+                        if body_file then
+                            body_str = read_from_file(body_file)
+                        end
+                    end
+                    ngx.var.content = body_str
+                end
+            ';
+            access_log /data/nginx/logs/pc/dotting.log dot_str;
+        }          
+	}
+}
+```
+
+#### 以表见表
+
+CREATE TABLE t_new LIKE t_old
