--- a/项目/总结.md
+++ b/项目/总结.md
@@ -149,3 +149,25 @@ server {
 #### 以表见表
 
 CREATE TABLE t_new LIKE t_old
+
+#### 商品库项目总结
+
+将商品存入es选择restful的api的原因：
+
+- 原先的spark-es 写入经常出现数据丢失，因为出现429错误码（too many request）
+- 缺少错误处理。dts 可以针对不同的错误码做出不同的处理.ogstash也不能灵活处理
+- 不能解决因版本冲突导致的数据覆盖。dts可以使用外部版本解决该问题
+  数据
+- 效率问题：17万写入耗时100秒（Spark版本180秒），写入速度提升80%。qps最高达到1.2w/s
+- 延迟问题：Kafka消费->ES可检索，最短0.1秒，最长4.7秒，平均2.75秒。Spark版本10秒-30秒不等。相对于Spark的短时批量，DTS的实时性更好。
+- 废弃了索引url类型字段的无填充即默认0的逻辑，单条索引磁盘占用降低31%。
+- 基于线上index的mapping创建规则，不再从配置文件中获取maping
+- bulk size 设置在13M  官方建议10-15M。经测试 13M 在该集群中最快
+
+选择pb格式存储的原因：
+
+- 占用内存小。是json的1/5  传输效率更高
+
+去重策略：百万以下使用diff，百万以上使用bf
+
+- bf以上允许存在一定误差，bf的效率远高于diff
