--- a/java/网络.md
+++ b/java/网络.md
@@ -138,3 +138,29 @@ epoll支持水平触发和边沿触发两种模式
 -  网络层
 -  数据链路层
 -  物理层 或者物理层数据链路层合并为 网络接口层 四层模型
+
+#### http与rpc的区别
+
+-  http是协议，rpc是方法，rpc的实现可能也会用到http
+-   http在应用层，rpc在传输层（长连接，少了三次握手，不过http2.0也可以链接复用了）
+- http报文中的有效字节数仅30%，rpc通过序列化发送有效消息，省去无用数据，提高了传输效率
+-  http需要可读性强，包括输入、输出，解析等。rpc就像调用方法一样调用，很简单。
+- rpc封装了服务降级，负载均衡，发现服务等面向服务的高级特性。
+- RPC服务主要是针对大型企业的，而HTTP服务主要是针对小企业的
+
+#### rpc
+
+远程调用过程，跨越了应用层和传输层，采用客户端/服务器模式。请求程序就是一个客户端，而服务提供程序就是一个服务器。首先，客户端调用进程发送一个有进程参数的调用信息到服务进程，然后等待应答信息。在服务器端，进程保持睡眠状态直到调用信息到达为止。当一个调用信息到达，服务器获得进程参数，计算结果，发送答复信息，然后等待下一个调用信息，最后，客户端调用进程接收答复信息，获得进程结果，然后调用执行继续进行。
+
+#### grpc特性
+
+- 基于http2.0.可以节省带宽、降低TCP链接次数、节省CPU
+- IDL使用ProtoBuf定义服务。ProtoBuf是由Google开发的一种数据序列化协议。pb的压缩和传输效率高，语法简单，表达力强
+- 多语言支持。
+
+#### 实现一个rpc
+
+https://blog.csdn.net/wwd0501/article/details/86677044
+
+
+
