--- a/mysql/事务.md
+++ b/mysql/事务.md
@@ -15,7 +15,7 @@ ACID
 #### 事务隔离级别
 
 - `读未提交（READ UNCOMMITTED）`：一个事务还没提交时，它做的变更就能被别的事务看到。
-- `读提交（READ COMMITTED）`：一个事务提交之后，它做的变更才会被其他事务看到。
+- `读提交（READ COMMITTED）`：一个事务提交之后，它做的变更才会被其他事务看到。也叫不可重读
 - `可重复读（REPEATABLE READ）`：一个事务执行过程中看到的数据，总是跟这个事务在启动时看到的数据是一致的。当然在可重复读隔离级别下，未提交变更对其他事务也是不可见的。
 - `串行化（SERIALIZABLE）`：对于同一行记录，“写”会加“写锁”，“读”会加“读锁”，当出现读写锁冲突的时候，后访问的事务必须等前一个事务执行完成，才能继续执行
 
@@ -32,7 +32,7 @@ RC下Read View在每次SELECT后都生成新的ReadView.即每次SELECT都能读
 
 #### MVCC---Multi-Version Concurrency Control
 
-MVCC	主要是为了提高数据库的并发性能，实现读（快照读）写冲突不加锁。
+MVCC	主要是为了提高数据库的并发性能，实现并发读（快照读）写不加锁。
 
 > 快照读：select
 >
