--- a/java/基础.md
+++ b/java/基础.md
@@ -115,6 +115,10 @@ Volatile如何保证内存可见性:
 1.当写一个volatile变量时，JMM会把该线程对应的本地内存中的共享变量刷新到主内存。
 2.当读一个volatile变量时，JMM会把该线程对应的本地内存置为无效。线程接下来将从主内存中读取共享变量
 
+如何保证可见性与指定重排
+
+https://blog.csdn.net/weixin_40230655/article/details/106599737
+
 #### 16.深克隆和浅克隆
 
 克隆：快速复制一个对象的副本
@@ -127,6 +131,20 @@ Volatile如何保证内存可见性:
 - 反射：动态获取信息以及动态调用对象的方法
 - 作用：可以实现反编译。class-java.  获取类的属性和方法
 - 优点：提高程序的灵活性和扩展性。创建对象不用通过new写死。可以通过配置读取创建
+
+#### CAS实现机制
+
+CAS就是比较与交换，全称为Compare-And-Swap，使用的Unsafe类+自旋锁思想；他是一条CPU并发原语
+
+原语操作：原语操作是连续的，且执行过程中不允许被打断
+
+CAS并发原语体现在使用java语言的unsafe类中的CAS方法，JVM会帮我们实现出CAS的汇编语言，这是一种完全依赖于硬件的功能，通过他实现了原子操作
+
+原文链接：https://blog.csdn.net/qq_44729800/article/details/108372920
+
+https://blog.csdn.net/hudaJY/article/details/90112238?utm_medium=distribute.pc_relevant_t0.none-task-blog-BlogCommendFromMachineLearnPai2-1.control&dist_request_id=1328740.29715.16169467742355579&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-BlogCommendFromMachineLearnPai2-1.control
+
+https://blog.csdn.net/qq_39219216/article/details/102531100?utm_medium=distribute.pc_relevant.none-task-blog-searchFromBaidu-1.control&dist_request_id=1328740.29715.16169467742355579&depth_1-utm_source=distribute.pc_relevant.none-task-blog-searchFromBaidu-1.control
 
 
 
