--- a/kafka/存储机制.md
+++ b/kafka/存储机制.md
@@ -25,6 +25,38 @@ kafka速度快的原因在于，把所有的消息都变成一个批量的文件
 - 再从内核缓冲区copy至内核中socket相关的缓冲区。
 - 最后再socket相关的缓冲区copy到协议引擎
 
+#### 压缩算法
+
+2.1.0版本之前，kafka支持3种压缩算法：GZIP、Snappy和LZ4
+
+2.1.0开始，kafka正式支持Zstandard算法(简写zstd)。它是Facebook开源的一个压缩算法，能够提供超高的压缩比。
+
+对于kafka测试而言，在吞吐方面：LZ4>Snappy> zstd、GZIP；
+
+在压缩比方面：zstd>lz4>gzip>snappy。
+
+CPU使用率方面，各个算法表现得差不多，只是在压缩时snappy使用的CPU较多一些，而在解压缩时gzip算法则可能使用更多的CPU
+
+kafka 的消息格式：	消息集合和消息。消息集合包含若干项日志项，日志项才是封装消息的地方。
+
+kafka的消息日志是由一系列消息集合日志项组成。kafka都是在消息集合这个层面上进行写入操作。
+
+#### 什么时候压缩
+
+producer端：指定压缩算法，producer启动后生产的每个消息集合都经过该压缩算法
+
+broker端：producer的压缩算法不一致的话需要先解压再压缩。一致的话则原封不动。或是消息格式发生变化（兼容老版本）
+
+#### 什么时候解压缩
+
+consumer:消费消息时解压缩
+
+broker:除了上述情况，还有一种情况，在broker端需要进行消息认证的时候需要解压缩
+
+#### 批量提交
+
+通过batch.size 和 linger.ms 设置。任意一条件到达都可进行屁来给你提交。linger.ms 默认是0.只要由消息就提交。batch.size 默认是16k,发往同一分区的消息满16K 提交
+
 ### 存储机制
 
 kafka的数据存储在磁盘中。通过topic将消息进行分类，每个topic可以分为多个分区partition。partition有多个备份replica  分布在不同的broker,只有replica leader 才会进行消息读写。
