--- a/kafka/疑问.md
+++ b/kafka/疑问.md
@@ -27,6 +27,20 @@ kafka事务引入了transactionId 和Epoch，设置transactional.id后，一个t
 
 ![img](..\image\kafka\leader-follwer.png)
 
+![image-20210328230028054](..\image\kafka\leader.png)
+
+#### controller 的leader 选举
+
+当broker启动的时候，都会创建KafkaController对象，但是集群中只能有一个leader对外提供服务，这些每个节点上的KafkaController会在指定的zookeeper路径下创建临时节点，只有第一个成功创建的节点的KafkaController才可以成为leader，其余的都是follower。当leader故障后，所有的follower会收到通知，再次竞争在该路径下创建节点从而选举新的leader
+
+#### partion 的leader 如何选举
+
+Kafka 使用 zookeeper 在 Broker 中选出一个 Controller，用于 Partition 分配和 Leader 选举。（生产过程中 Broker 要分配 Partition，消费过程这里，也要分配 Partition 给消费者。）
+
+调用配置的分区选择算法从isr选举出一个
+
+如果 ISR 列表是空，那么会根据配置，随便选一个 Replica 做 Leader，或者干脆这个 Partition 就是歇菜；如果 ISR 列表的有机器，但是也歇菜了，那么还可以等 ISR 的机器活过来。
+
 **mmap 和 sendfile总结**
 
 1、都是Linux内核提供、实现零拷贝的API；
