--- a/mysql/优化.md
+++ b/mysql/优化.md
@@ -10,6 +10,7 @@
 8. 使用 varchar/nvarchar 代替 char/nchar
 9. in 后表小   exits 后表大
 10. where 过滤多的条件放前面
+11. 对于长字段 （例如邮箱），可以使用前缀索引或对字段进行hash 做索引
 
 #### 对于大量的数据，mysql 进行分区分表优化
 
