--- a/项目/总结.md
+++ b/项目/总结.md
@@ -146,46 +146,26 @@ server {
 }
 ```
 
-#### 以表见表
+#### 以表建表
 
+```
 CREATE TABLE t_new LIKE t_old
+```
 
-#### 商品库项目总结
+#### HttpComponentsClientHttpRequestFactory vs SimpleClientHttpRequestFactory
 
-将商品存入es选择restful的api的原因：
+HttpComponentsClientHttpRequestFactory和SimpleClientHttpRequestFactory，前者是用连接池管理数据库的链接，后者是每次调用restTemplate时都要打开一个链接，然后关闭，性能稍差一些。
 
-- 原先的spark-es 写入经常出现数据丢失，因为出现429错误码（too many request）
-- 缺少错误处理。dts 可以针对不同的错误码做出不同的处理.ogstash也不能灵活处理
-- 不能解决因版本冲突导致的数据覆盖。dts可以使用外部版本解决该问题
-  数据
-- 效率问题：17万写入耗时100秒（Spark版本180秒），写入速度提升80%。qps最高达到1.2w/s
-- 延迟问题：Kafka消费->ES可检索，最短0.1秒，最长4.7秒，平均2.75秒。Spark版本10秒-30秒不等。相对于Spark的短时批量，DTS的实时性更好。
-- 废弃了索引url类型字段的无填充即默认0的逻辑，单条索引磁盘占用降低31%。
-- 基于线上index的mapping创建规则，不再从配置文件中获取maping
-- bulk size 设置在13M  官方建议10-15M。经测试 13M 在该集群中最快
+#### idea 快捷键
 
-选择pb格式存储的原因：
+```
+Ctrl+a: 跳到命令行首
+Ctrl+e: 跳到命令行尾
+Ctrl+u: 删除光标至命令行首的内容
+Ctrl+k: 删除光标至命令行尾的内容
+```
 
-- 占用内存小。是json的1/5  压缩和传输效率高，语法简单，表达力强
 
-去重策略：百万以下使用diff，百万以上使用bf
-
-- bf以上允许存在一定误差，bf的效率远高于diff
-
-mysql切换kv
-
-- 现有1T的数据量，mysql  库撑不住。
-- 库中存放的数据基于kv模式，都是大的kv.mysql查询效率低。
-- 如果存放于redis中，大的kv不利于查找
-- 
-
-es 扩容，拆分的原因
-
-- 数据量增大，查询效率变低
-- 不同行业的所有数据在一个索引下，查询效率低下且不是es的发展趋势。
-- 行业1的数据占总数居的70%。拆分行业1 ，查询效率
-  -   以每天调用最多的商品包接口为例：5个包查询速度由15秒降低至100毫秒
-  -  千万级别FEED填充率计算由7S以上降低至1S内
 
 
 
